- added: `SchemaEntity.verify(name, function($), [cache])` for async verification of values
- added: `TEMP` variable as a new global variable (it's cleaned every 7 minutes)
- added: `CONF.allow_persistent_images: true` which allows to reuse resized images in temp directory
- added: `req.filecache(callback)` as alias for `F.exists()`
- added: own QueryParser

- updated: `websocket.send2(message, comparer, replacer, [params])` by adding `params` argument for comparer function
- updated: bundling skips all bundles with `-bk.bundle` in filename
- updated: bundle filenames are displayed in console
- updated: `UPDATE()` method by adding `noarchive` argument
- updated: `TEST()` method supports `[subdomain]` keyword and `METHOD url` in URL address
- updated: `MODIFY([filename], fn)` by adding `filename` argument
- updated: background of schedulers by @fgnm
- updated: `U.download()` by adding `param` argument
- updated: `U.request()` by adding `param` argument
- updated: `schema.cl(name, [value])` method by adding `value` argument for replacing of existing code-list
- updated: Tangular version to `v4.0.0`

- improved: `filename` in modificators (now it contains relative paths)
- improved: performance of `U.request()` (around +30%)
- improved: performance of `U.download()` (around +30%)
- improved: performance of `RESTBuilder`
- improved: CSS minifier by compressing single hex color from e.g. `#000000` to `#000`

- fixed: localization in `totaljs` executable script
- fixed: phone validation
- fixed: `DOWNLOAD()`
- fixed: `Number.VAT()` by Tomas Novak
- fixed: debugging mode in Node.js v14
- fixed: `allow_compile_html` in static files
- fixed: `ROUTE()` method, there was a problem with spaces `GET /*      `
- fixed: `ACTION()` with json output
- fixed: controller in `$ACTION()` with used `get` and `query` actions
- fixed: `PATCH` method in `$ACTION()`
- fixed: `schema.allow()` in `PATCH` method
- fixed: image resizing in debug-mode

======= 3.4.1
